syntax = "proto3";

package user;

// Define the UserService with methods for user operations
service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc AuthenticateUser (LoginRequest) returns (AuthResponse);
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);  // New method to fetch user by ID
}

// Request for creating a new user
message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

// Request for logging in a user
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Request for getting user by ID
message GetUserByIdRequest {
  string userId = 1;  // The user ID to fetch the user data
}

// Response when a user is created or fetched
message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

// Response for authentication
message AuthResponse {
  string token = 1;
}
