syntax = "proto3";

package book;

service BookService {
  rpc AddBook (AddBookRequest) returns (BookResponse);
  rpc GetBookById (GetBookRequest) returns (BookResponse);
  rpc ListBooks (Empty) returns (BookListResponse);
}

message AddBookRequest {
  string title = 1;
  string author = 2;
  string description = 3;
}

message GetBookRequest {
  string id = 1;
}

message Empty {}

message BookResponse {
  string id = 1;
  string title = 2;
  string author = 3;
  string description = 4;
}

message BookListResponse {
  repeated BookResponse books = 1;
}
